--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,7 @@
 {
   "port": 22441,
   "default_visualizer": "visualizer4.js",
+  "open_browser": true,
   "sample_rate_match": {
     "enabled": true,
     "mapping": {
